fixed spoon version works good