@@ -1,9 +1,9 @@
-/*
+/**
  * SPDX-License-Identifier: (MIT OR CECILL-C)
  *
- * Copyright (C) 2006-2023 INRIA and contributors
+ * Copyright (C) 2006-2019 INRIA and contributors
  *
- * Spoon is available either under the terms of the MIT License (see LICENSE-MIT.txt) or the Cecill-C License (see LICENSE-CECILL-C.txt). You as the user are entitled to choose the terms under which to adopt Spoon.
+ * Spoon is available either under the terms of the MIT License (see LICENSE-MIT.txt) of the Cecill-C License (see LICENSE-CECILL-C.txt). You as the user are entitled to choose the terms under which to adopt Spoon.
  */
 package spoon.support.compiler;
 
@@ -13,7 +13,6 @@ import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import spoon.compiler.SpoonFile;
 import spoon.compiler.SpoonFolder;
@@ -44,12 +43,20 @@ public class VirtualFolder implements SpoonFolder {
 
 	@Override
 	public List<SpoonFile> getAllJavaFiles() {
-		return getAllFiles().stream().filter(SpoonFile::isJava).collect(Collectors.toList());
+		List<SpoonFile> result = new ArrayList<>();
+
+		for (SpoonFile f : getAllFiles()) {
+			if (f.isJava()) {
+				result.add(f);
+			}
+		}
+
+		return result;
 	}
 
 	@Override
 	public List<SpoonFile> getFiles() {
-		return List.copyOf(files);
+		return Collections.unmodifiableList(new ArrayList<>(files));
 	}
 
 	@Override
