@@ -1,22 +1,17 @@
-/*
+/**
  * SPDX-License-Identifier: (MIT OR CECILL-C)
  *
- * Copyright (C) 2006-2023 INRIA and contributors
+ * Copyright (C) 2006-2019 INRIA and contributors
  *
- * Spoon is available either under the terms of the MIT License (see LICENSE-MIT.txt) or the Cecill-C License (see LICENSE-CECILL-C.txt). You as the user are entitled to choose the terms under which to adopt Spoon.
+ * Spoon is available either under the terms of the MIT License (see LICENSE-MIT.txt) of the Cecill-C License (see LICENSE-CECILL-C.txt). You as the user are entitled to choose the terms under which to adopt Spoon.
  */
 package spoon9.support.compiler;
 
-import java.io.File;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
-
 import spoon9.compiler.SpoonFile;
 import spoon9.compiler.SpoonFolder;
+
+import java.io.File;
+import java.util.*;
 
 public class VirtualFolder implements SpoonFolder {
 	protected final Set<SpoonFile> files = new HashSet<>();
@@ -44,12 +39,20 @@ public class VirtualFolder implements SpoonFolder {
 
 	@Override
 	public List<SpoonFile> getAllJavaFiles() {
-		return getAllFiles().stream().filter(SpoonFile::isJava).collect(Collectors.toList());
+		List<SpoonFile> result = new ArrayList<>();
+
+		for (SpoonFile f : getAllFiles()) {
+			if (f.isJava()) {
+				result.add(f);
+			}
+		}
+
+		return result;
 	}
 
 	@Override
 	public List<SpoonFile> getFiles() {
-		return List.copyOf(files);
+		return Collections.unmodifiableList(new ArrayList<>(files));
 	}
 
 	@Override
